syntax = "proto3";
import "google/protobuf/empty.proto";

package caramel;

service DataHost {
  rpc PublishJointData (stream DataJoint) returns (stream JointsResponse) {}
  rpc PingDriverService (google.protobuf.Empty) returns (StatusResponse) {}
}

message JointsResponse
{
  repeated string names = 1;
}

message StatusResponse
{
  int64 status = 1;
}

message DataQuaternion
{
  float w = 1;
  float x = 2;
  float y = 3;
  float z = 4;
}

message DataVector
{
  float x = 1;
  float y = 2;
  float z = 3;
}

message DataJoint
{
  string name = 1;
  bool isTracked = 2;
  DataQuaternion orientation = 3;
  DataVector position = 4;
}
